<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nva_graph.xml"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="net.dbjorge.stitchosaur.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_home_to_addProject"
            app:destination="@id/addProjectFragment" />

        <action
            android:id="@+id/action_home_to_projectDetails"
            app:destination="@id/projectDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/projectDetailsFragment"
        android:name="net.dbjorge.stitchosaur.ui.projectdetails.ProjectDetailsFragment"
        android:label="@string/project_details_label"
        tools:layout="@layout/project_details_fragment">
        <argument android:name="projectId" app:argType="integer" />

        <action
            android:id="@+id/action_projectDetails_to_editProject"
            app:destination="@id/editProjectFragment" />

        <action
            android:id="@+id/action_projectDetails_to_deleteProject"
            app:destination="@id/deleteProjectFragment" />
    </fragment>

    <fragment
        android:id="@+id/addProjectFragment"
        android:name="net.dbjorge.stitchosaur.ui.addproject.AddProjectFragment"
        android:label="@string/add_project_label"
        tools:layout="@layout/add_project_fragment">
    </fragment>

    <fragment
        android:id="@+id/editProjectFragment"
        android:name="net.dbjorge.stitchosaur.ui.editproject.EditProjectFragment"
        android:label="@string/edit_project_label"
        tools:layout="@layout/edit_project_fragment">
        <argument android:name="projectId" app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/deleteProjectFragment"
        android:name="net.dbjorge.stitchosaur.ui.deleteproject.DeleteProjectFragment"
        android:label="@string/delete_project_label"
        tools:layout="@layout/delete_project_fragment">
        <argument android:name="projectId" app:argType="integer" />
    </fragment>
</navigation>